WIP: css to scss...fixed chip from being misaligned on product card and other conversions

--- a/client/src/Styles/Store.scss
+++ b/client/src/Styles/Store.scss
@@ -103,8 +103,8 @@
             }
 
             .product-chip {
-                margin-top: 1%;
                 margin-left: 2%;
+                margin-top: -24vh;
 
                 .Hybrid {
                     background-color: green;
